cmake: Remove alias from package config
The cmake target of an alias may not be an Imported Target.
Always build the msgpackc target and only build the msgpackc-static
target if both should be build to fix issue #801. Thereby the type
(shared or static) of the msgpackc target depends on the build
configuration.

--- a/msgpack-config.cmake.in
+++ b/msgpack-config.cmake.in
@@ -6,18 +6,13 @@
 #
 # ::
 #
-#   msgpackc-static
 #   msgpackc
+#   msgpackc-cxx
+#   msgpackc-static (optional)
 #
 
 @PACKAGE_INIT@
 
 include(CMakeFindDependencyMacro)
 
-if(NOT TARGET msgpackc AND NOT TARGET msgpackc-static)
-  include("${CMAKE_CURRENT_LIST_DIR}/msgpack-targets.cmake")
-
-  if(NOT @MSGPACK_ENABLE_SHARED@)
-    add_library(msgpackc ALIAS msgpackc-static)
-  endif()
-endif()
+include("${CMAKE_CURRENT_LIST_DIR}/msgpack-targets.cmake")
